--- a/index.html
+++ b/index.html
@@ -105,6 +105,68 @@
     </div>
   </section>
 
+  <section class="info">
+    <div class="container">
+      <h2 class="title">
+        ЗЕЛЁНЫЙ ТАРИФ
+      </h2>
+      <div class="info__inner">
+        <div class="info__box">
+          <div class="info-tabs">
+            <div class="info-tabs__items">
+              <a class="info-tabs__item" href="#">продажа</a>
+              <a class="info-tabs__item" href="#">закрепление</a>
+              <a class="info-tabs__item" href="#">ограничения</a>
+            </div>
+            <div class="info-tabs__contentbox">
+              1.2.3
+            </div>
+          </div>
+          <ul class="info__list">
+            <li class="info__list-item">
+              <h4 class="info__list-title">
+                Гарантия выкупа
+              </h4>
+              <p class="info__list-text">
+                Гарантированный выкуп электроэнергии государством - прописано в НКРЕ №447 
+              </p>
+            </li>
+            <li class="info__list-item">
+              <h4 class="info__list-title">
+                Долгосрочно
+              </h4>
+              <p class="info__list-text">
+                это проект, поддерживаемый международными инвестиционными организациями
+              </p>
+            </li>
+            <li class="info__list-item">
+              <h4 class="info__list-title">
+                Вид вложения
+              </h4>
+              <p class="info__list-text">
+                Альтернатива банковским депозитам, окупаемость - от 16% до 18% годовых
+              </p>
+            </li>
+            <li class="info__list-item">
+              <h4 class="info__list-title">
+                Высокая ставка
+              </h4>
+              <p class="info__list-text">
+                Самая высокая тарифная ставка в европе - 0,16 евро
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="info__conteiner">
+          <p class="info__conteiner-text">
+            «Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам  не только потреблять, но и продавать выработанное домашними солнечными электростанциями электричество в электросеть общего пользования.
+          </p>
+          <img class="info__conteiner-img" src="images/info.jpg" alt="Зелёный тариф">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
