Block info has been completed

--- a/index.html
+++ b/index.html
@@ -114,12 +114,39 @@
         <div class="info__box">
           <div class="info-tabs">
             <div class="info-tabs__items">
-              <a class="info-tabs__item" href="#">продажа</a>
-              <a class="info-tabs__item" href="#">закрепление</a>
-              <a class="info-tabs__item" href="#">ограничения</a>
+              <a class="info-tabs__item info-tabs__item--active" href="#tab-1">продажа</a>
+              <a class="info-tabs__item" href="#tab-2">закрепление</a>
+              <a class="info-tabs__item" href="#tab-3">ограничения</a>
             </div>
             <div class="info-tabs__contentbox">
-              1.2.3
+              <div class="info-tabs__content info-tabs__content--active" id="tab-1">
+                <div class="info-slider">
+                  <div class="info-slider__item">
+                    <img class="info-slider__img" src="images/slider.jpg" alt="">
+                    <p class="info-slider__text">
+                      Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).
+                    </p>
+                  </div>
+                  <div class="info-slider__item">
+                    <img class="info-slider__img" src="images/slider.jpg" alt="">
+                    <p class="info-slider__text">
+                      Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).
+                    </p>
+                  </div>
+                  <div class="info-slider__item">
+                    <img class="info-slider__img" src="images/slider.jpg" alt="">
+                    <p class="info-slider__text">
+                      Цена, по которой домохозяйства могут продать электроэнергию, более чем в 10 раз превышает цену, по которой они ее покупают для своих нужд — 0,16 Евро/кВт (продажа).
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="info-tabs__content" id="tab-2">
+                Content 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est magnam repellendus temporibus. Velit cumque odio reprehenderit debitis laboriosam dolorum asperiores recusandae nesciunt. Repellendus nemo voluptates omnis nihil reprehenderit quasi consectetur.
+              </div>
+              <div class="info-tabs__content" id="tab-3">
+                Content 3. Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Имени курсивных над взгляд ведущими необходимыми по всей раз семь они, коварный о деревни текстами правилами гор букв собрал которой первую.
+              </div>
             </div>
           </div>
           <ul class="info__list">
@@ -157,11 +184,11 @@
             </li>
           </ul>
         </div>
-        <div class="info__conteiner">
-          <p class="info__conteiner-text">
+        <div class="info__content">
+          <p class="info__content-text">
             «Зеленый тариф» — это особые тарифные условия, которые позволяют частным домохозяйствам  не только потреблять, но и продавать выработанное домашними солнечными электростанциями электричество в электросеть общего пользования.
           </p>
-          <img class="info__conteiner-img" src="images/info.jpg" alt="Зелёный тариф">
+          <img class="info__content-img" src="images/info.jpg" alt="Зелёный тариф">
         </div>
       </div>
     </div>
