--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
       </h2>
       <div class="clients-slider">
         <div class="clients-slider__item">
-          <div class="clents-slider__box">
+          <div class="clients-slider__box">
             <img class="clients-slider__box-img" src="images/clients.jpg" alt="">
             <div class="clients-slider__box-content">
-              <h4 class="clients-slider__box-content">
+              <h4 class="clients-slider__box-title">
                 Солнечная электростанция 30 кВт подключенная по Зеленому Тарифу
               </h4>
               <ul class="clients-slider__box-list">
@@ -232,10 +232,10 @@
           </div>
         </div>
         <div class="clients-slider__item">
-          <div class="clents-slider__box">
+          <div class="clients-slider__box">
             <img class="clients-slider__box-img" src="images/clients.jpg" alt="">
             <div class="clients-slider__box-content">
-              <h4 class="clients-slider__box-content">
+              <h4 class="clients-slider__box-title">
                 Солнечная электростанция 30 кВт подключенная по Зеленому Тарифу
               </h4>
               <ul class="clients-slider__box-list">
@@ -256,6 +256,61 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="step">
+    <div class="container">
+      <div class="step__inner">
+        <div class="step__content">
+          <h2 class="title">
+            5 ШАГОВ К СОБСТВЕННОЙ ЭЛЕКТРОСТАНЦИИ
+          </h2>
+          <ol class="step__list">
+            <li class="step__list-item">
+              <h4 class="step__list-title">
+                Заявка или звонок
+              </h4>
+              <p class="step__list-text">
+                Оставляете заявку на нашем сайте или связываетесь с нами по телефону или в мессенджерах.
+              </p>
+            </li>
+            <li class="step__list-item">
+              <h4 class="step__list-title">
+                Консультация и замер на объекте
+              </h4>
+              <p class="step__list-text">
+                Мы просчитываем более 10- 15 вариантов солнечной станции на Вашем участке, чтобы предложить Вам один наиболее выгодный.
+              </p>
+            </li>
+            <li class="step__list-item">
+              <h4 class="step__list-title">
+                Заключение договора
+              </h4>
+              <p class="step__list-text">
+                Заключается договор, благодаря которому, вы будете застрахованы от некачественного оборудования и срыва сроков.
+              </p>
+            </li>
+            <li class="step__list-item">
+              <h4 class="step__list-title">
+                Монтаж СЭС
+              </h4>
+              <p class="step__list-text">
+                Наши специалисты производят монтаж солнечных батарей, проводки и инверторов, при необходимости изготавливают опоры.
+              </p>
+            </li>
+            <li class="step__list-item">
+              <h4 class="step__list-title">
+                Получение дохода от государства
+              </h4>
+              <p class="step__list-text">
+                После подключения к «Зеленому тарифу», вы получаете доход за каждый киловатт, выработанный на Вашей солнечной электростанции по зафиксированному тарифу на момент подключения.
+              </p>
+            </li>
+          </ol>
+        </div>
+        <img class="step__img" src="images/step.jpg" alt="">
       </div>
     </div>
   </section>
