--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#ffffff"> 
+  <title>SOLAR EXE</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +14,11 @@
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon/site.webmanifest">
+  <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#0a7500">
 </head>
 <body>
   <header class="header">
@@ -27,7 +34,7 @@
         с доходом от 1000 $ в месяц
       </span>
     </h1>
-    <a class="header__button button" href="#">
+    <a class="header__button button" href="#footer__form">
       <svg width="101" height="100" viewBox="0 0 101 100" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path class="button__path" d="M99.0521 50C99.0521 77.0615 77.1029 99 50.026 99C22.9492 99 1 77.0615 1 50C1 22.9385 22.9492 1 50.026 1C77.1029 1 99.0521 22.9385 99.0521 50Z" stroke="white" stroke-width="2" fill="transparent"/>
         <path d="M70.7434 50.7071C71.134 50.3166 71.134 49.6834 70.7434 49.2929L64.3795 42.9289C63.989 42.5384 63.3558 42.5384 62.9653 42.9289C62.5747 43.3195 62.5747 43.9526 62.9653 44.3431L68.6221 50L62.9653 55.6569C62.5747 56.0474 62.5747 56.6805 62.9653 57.0711C63.3558 57.4616 63.989 57.4616 64.3795 57.0711L70.7434 50.7071ZM30.0155 51H70.0363V49H30.0155V51Z" fill="white"/>
@@ -214,12 +221,12 @@
                 Солнечная электростанция 30 кВт подключенная по Зеленому Тарифу
               </h4>
               <ul class="clients-slider__box-list">
-                <li class="clients-slider__box-item">Расположение: Харьковская обл., г. Харьков</li>
+                <li class="clients-slider__box-item">Расположение: Московская обл., г. Истра</li>
                 <li class="clients-slider__box-item">Чистый доход за вычетом налогов с мая 2017 г. по май 2019 г. 13 900 $.</li>
                 <li class="clients-slider__box-item">Смонтирована: апрель 2017 г.</li>
                 <li class="clients-slider__box-item">Срок службы: 25-30 лет</li>
               </ul>
-              <a class="button" href="#">
+              <a class="clients__button button" href="#footer__form">
                 <svg width="101" height="100" viewBox="0 0 101 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path class="button__path" d="M99.0521 50C99.0521 77.0615 77.1029 99 50.026 99C22.9492 99 1 77.0615 1 50C1 22.9385 22.9492 1 50.026 1C77.1029 1 99.0521 22.9385 99.0521 50Z" stroke="black" stroke-width="2" fill="transparent"/>
                   <path d="M70.7434 50.7071C71.134 50.3166 71.134 49.6834 70.7434 49.2929L64.3795 42.9289C63.989 42.5384 63.3558 42.5384 62.9653 42.9289C62.5747 43.3195 62.5747 43.9526 62.9653 44.3431L68.6221 50L62.9653 55.6569C62.5747 56.0474 62.5747 56.6805 62.9653 57.0711C63.3558 57.4616 63.989 57.4616 64.3795 57.0711L70.7434 50.7071ZM30.0155 51H70.0363V49H30.0155V51Z" fill="black"/>
@@ -239,12 +246,12 @@
                 Солнечная электростанция 30 кВт подключенная по Зеленому Тарифу
               </h4>
               <ul class="clients-slider__box-list">
-                <li class="clients-slider__box-item">Расположение: Харьковская обл., г. Харьков</li>
+                <li class="clients-slider__box-item">Расположение: Московская обл., г. Истра</li>
                 <li class="clients-slider__box-item">Чистый доход за вычетом налогов с мая 2017 г. по май 2019 г. 13 900 $.</li>
                 <li class="clients-slider__box-item">Смонтирована: апрель 2017 г.</li>
                 <li class="clients-slider__box-item">Срок службы: 25-30 лет</li>
               </ul>
-              <a class="button" href="#">
+              <a class="clients__button button" href="#footer__form">
                 <svg width="101" height="100" viewBox="0 0 101 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path class="button__path" d="M99.0521 50C99.0521 77.0615 77.1029 99 50.026 99C22.9492 99 1 77.0615 1 50C1 22.9385 22.9492 1 50.026 1C77.1029 1 99.0521 22.9385 99.0521 50Z" stroke="black" stroke-width="2" fill="transparent"/>
                   <path d="M70.7434 50.7071C71.134 50.3166 71.134 49.6834 70.7434 49.2929L64.3795 42.9289C63.989 42.5384 63.3558 42.5384 62.9653 42.9289C62.5747 43.3195 62.5747 43.9526 62.9653 44.3431L68.6221 50L62.9653 55.6569C62.5747 56.0474 62.5747 56.6805 62.9653 57.0711C63.3558 57.4616 63.989 57.4616 64.3795 57.0711L70.7434 50.7071ZM30.0155 51H70.0363V49H30.0155V51Z" fill="black"/>
@@ -318,12 +325,15 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__top">
-        <form class="footer__form" action="">
+        <form id="footer__form" class="footer__form">
           <h2 class="footer__title">
             ОСТАВИТЬ ЗАЯВКУ
           </h2>
-          <input class="footer__input" type="text" placeholder="Имя">
-          <input class="footer__input" type="tel" placeholder="Телефон">
+          <input type="hidden" name="project_name" value="SOLAR EXE">
+          <input type="hidden" name="admin_email" value="ntegzu@mailto.plus">
+          <input type="hidden" name="form_subject" value="Form Subject">
+          <input class="footer__input" name="Имя" type="text" placeholder="Имя">
+          <input class="footer__input" name="Телефон" type="tel" placeholder="Телефон">
           <button class="footer__form-btn button">
             <svg width="101" height="100" viewBox="0 0 101 100" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="button__path" d="M99.0521 50C99.0521 77.0615 77.1029 99 50.026 99C22.9492 99 1 77.0615 1 50C1 22.9385 22.9492 1 50.026 1C77.1029 1 99.0521 22.9385 99.0521 50Z" stroke="white" stroke-width="2" fill="transparent"/>
@@ -341,18 +351,18 @@
           <ul class="footer__contacts-list">
             <li class="footer__contacts-item">
               Центральный офис: <br>
-              г. Москва, ул,Гоголя 13, 1й этаж
+              г. Москва, ул. Гоголя 13, 1-ый этаж
             </li>
             <li class="footer__contacts-item">
-              Представительство в Киеве: <br>
-              г. Киев, ул. Є. Коновальця, 103 оф. 410
+              Представительство в Минске: <br>
+              г. Минск, ул. Щорса 103, оф. 410
             </li>
             <li class="footer__contacts-item">
-              Представительства в Харькове, Одессе, Ростове, Сочи, Белгороде
+              Представительства в Санкт-Петербурге, Ростове, Твери, Гомеле, Витебске
             </li>
             <li class="footer__contacts-item">
               <a class="footer__phone" href="tel:+79876545456">+7 987 654-54-56</a><br>
-              <a class="footer__phone" href="tel:+380675043257">+38 067 504-32-57</a>
+              <a class="footer__phone" href="tel:+375295043257">+375 29 504-32-57</a>
             </li>
             <li class="footer__contacts-item">
               Ежедневно 08:00 - 20:00
